// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectfieldWrapper snapshots tests renders SelectField component 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
    style="width: 100%;"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard css-h9aup-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      id="test-label"
    />
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-up58gs-MuiInputBase-root-MuiInput-root-MuiSelect-root"
      floatinglabeltext="This is a test selectfield component"
    >
      <div
        aria-controls="<dynamic>"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="test-select"
        class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
        data-testid="test-select"
        id="test-select"
        role="combobox"
        tabindex="0"
      >
        <span
          class="notranslate"
        >
          ​
        </span>
      </div>
      <input
        aria-hidden="true"
        aria-invalid="false"
        aria-labelledby="test-label"
        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
        data-analyticsid="test-input"
        data-testid="test-input"
        id="test-input"
        name="selectfield"
        tabindex="-1"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`SelectfieldWrapper snapshots tests renders an error 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
    style="width: 100%;"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-standard css-h9aup-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="false"
      id="test-label"
    />
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-formControl css-up58gs-MuiInputBase-root-MuiInput-root-MuiSelect-root"
      floatinglabeltext="test selectfield component"
    >
      <div
        aria-controls="<dynamic>"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="test-select"
        class="MuiSelect-select MuiSelect-standard Mui-error MuiInputBase-input MuiInput-input css-1rxz5jq-MuiSelect-select-MuiInputBase-input-MuiInput-input"
        data-testid="test-select"
        id="test-select"
        role="combobox"
        tabindex="0"
      >
        <span
          class="notranslate"
        >
          ​
        </span>
      </div>
      <input
        aria-hidden="true"
        aria-invalid="true"
        aria-labelledby="test-label"
        class="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
        data-analyticsid="test-input"
        data-testid="test-input"
        id="test-input"
        name="selectfield"
        tabindex="-1"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-pqjvzy-MuiSvgIcon-root-MuiSelect-icon"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
    <p
      class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium css-1d7hrfi-MuiFormHelperText-root"
    >
      Something bad happened
    </p>
  </div>
</div>
`;
